# chronotape

./: .gitignore  .gitmodules  CMakeLists.txt  build.bat  build_with_vcpkg.ps1  main.cpp  output.txt  run.bat  showChart.py  test_output.cpp
Backtester/: Backtester.cpp  Backtester.hpp
Chart/: Chart.cpp  Chart.hpp
DataHandler/: DateUtils.cpp  MMapFile.hpp  TapeReader.hpp
src/broker/: BrokerSim.cpp  BrokerSim.h
src/core/: BacktestRunner.cpp  EngineCtx.h  EngineCtxBridge.cpp  EngineCtxBridge.h
src/data/: DataHandler.hpp  DateUtils.hpp  MMapFile.cpp  TapeReader.cpp  TapeReader.hpp  TapeTypes.hpp
src/features/: FeatureManager.cpp  FeatureManager.h  RunPackFormat.h  RunPackWriter.cpp  RunPackWriter.h
src/results/: MetricsEngine.cpp  MetricsEngine.h  RunRecorder.h  RunSeries.h  TradeLog.h  TradeTypes.h
src/strategy/: EmaFlipStrategy.cpp  PluginLoader.cpp  PluginLoader.h  strategy_api.h
tools/: makeTape.py
